--- a/trunk/mc_102_pacman/mc_102_pacman.cbp
+++ b/trunk/mc_102_pacman/mc_102_pacman.cbp
@@ -38,6 +38,10 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="score.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="score.h" />
 		<Unit filename="timer.c">
 			<Option compilerVar="CC" />
 		</Unit>
